--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,14 @@ html {
     font-size: 100%;
 }
 body{
-    font-family: "Yu Gothic Medium", "游ゴシック Medium", YuGothic, "游ゴシック体", "ヒラギノ角ゴ Pro W3", sans-serif;
+    font-family: 'メイリオ', 'Meiryo', sans-serif;;
     line-height: 1.7;
-    color: #432;
-    background-color: rgb(220, 240, 243);
+    color: #747474;
+    background-color: rgb(212,225,225);
 }
 a {
     text-decoration: none;
+    color: #01433f;
 }
 img {
     max-width: 100%;
@@ -53,7 +54,7 @@ article {
     margin: 2em 2em;
     margin-bottom: 0px;
     margin-right: 0em;
-    color: #2c2c2f;
+    color: #01433f;;
     background: #ffffff;/*背景色*/
 }
 
@@ -133,34 +134,31 @@ article {
     padding: 0.5em 1em;
     margin: 2em 2em;
     margin-right: 0em;
-    color: #2c2c2f;
+    color:  #01433f;;
     background: #ffffff;/*背景色*/
 }
 
 .top_top{
     display: flex;
     flex-direction: row;
+    width: 100%;
 }
 
 .top_title{
-    color:  #2c2c2f;
+    color:#01433f;
     font-size: 20px;
-    border-bottom: solid 3px #cce4ff;
+    border-bottom: solid 3px rgb(236,180,124);
     position: relative;
     padding: 4px;
 }
 
-.top_title:after {
-    position: absolute;
-    content: " ";
-    display: block;
-    border-bottom: solid 3px #54a1cd;
-    bottom: -3px;
-    width: 20%;
-}
-
 .top_title:hover{
     color: gray;
+}
+
+.top_date{
+    text-align: left;
+    font-size: 10px;
 }
 
 .text_date{
@@ -175,7 +173,7 @@ article {
 }
 
 .edit_text{
-    color:  #2c2c2f;
+    color:  #01433f;
     text-align: right;
     font-size: 12px;
 }
@@ -184,8 +182,14 @@ article {
     padding: 0.5em 1em;
     margin: 0.5em 2em;
     margin-right: 0em;
-    color: #2c2c2f;
+    color: #01433f;
     background: #ffffff;/*背景色*/
+}
+
+
+.text_content p.top_name{
+    color:rgb(152,152,152);
+    size: 8px;
 }
 
 .post_figure {
@@ -203,7 +207,9 @@ article {
 .top_content{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    padding: 0.5em 1em;
+    margin: 0.5em 1em;
+    margin-right: 0em;
 }
 
 .text_content{
@@ -224,6 +230,10 @@ aside {
     overflow:auto;
 }
 
+.sub_logo{
+    text-align: center;
+}
+
 aside p {
     padding:auto;
     margin:5px;
@@ -235,12 +245,12 @@ aside p {
     margin-top: 2em;
     color: #5d627b;
     background: white;
-    border-top: solid 5px #54a1cd;
+    border-top: solid 10px rgb(60,188,189);
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
 }
 
 .sub-menu{
-    color:#432;
+    color:#01433f;
     list-style: none;
 }
 
@@ -254,16 +264,25 @@ aside p {
 .sub-menu li{
     border-bottom: 1px #ddd solid;
     padding: 5px;
-    font-size: 13px;
+    font-size: 8px;
 }
 
 .sub-menu a{
-    color:#432;
+    color:#01433f;
     padding: 10px;
     display:block;
+    font-family: "M PLUS Rounded 1c"; 
+    font-style: bold;
+    font-size :14px;
 }
 .sub-menu a:hover{
     color:gray;
+}
+
+.sub-menu a:first-letter{
+    color: rgb(60,188,189);
+    font-size:20px;
+    font-weight: bold;
 }
 
 .sub-button{
@@ -275,8 +294,8 @@ aside p {
     margin-bottom: 20px;
     text-decoration: none;
     color: #FFF;
-    background: #21b4c7;/*色*/
-    border: solid 1px #1aaab4;/*線色*/
+    background: rgb(60,188,189);/*色*/
+    border: solid 1px rgb(60,188,189);/*線色*/
     border-radius: 4px;
     box-shadow: inset 0 1px 0 rgba(255,255,255,0.2);
     text-shadow: 0 1px 0 rgba(0,0,0,0.2);
@@ -291,25 +310,77 @@ aside p {
     text-align: center;
 }
 
+nav.navi *, nav.navi *:after, nav.navi *:before {
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
+}
+nav.navi a {
+	text-decoration: none;
+}
+nav.navi {
+	margin: 2em 0;
+	text-align: center;
+}
+.navi .pagination {
+	display: inline-block;
+	margin-top: 1em;
+	padding: 0 0.5em;
+}
+.navi .pagenum {
+	font-size: 1em;
+	line-height: 30px;
+	display: block;
+	float: left;
+	transition: 400ms ease;
+	letter-spacing: 0.1em;
+	color: #37474F;
+	border-radius: 50%;
+	width: 30px;
+	height: 30px;
+	margin: auto;
+}
+.navi .pagenum:hover,
+.navi .pagenum.current {
+	font-weight: bold;
+	color: #37474F;
+	background-color: #a5ce8e;
+	border-radius: 50%;
+}
+
+.navi .pagenum.prev{
+    margin: auto 15px;
+    text-align: center;
+}
+
+.navi .pagenum.prev:hover,
+.navi .pagenum.next:hover {
+	color: #a5ce8e;
+	background-color: transparent;
+	border-radius: 50%;
+}
 
 /*text*/
 
 .textarea_box {
-    /* position: flex; */
+    position: flex;
+    flex-direction: column;
     padding: 0.5em 1em;
     margin: 0.5em 2em;
     margin-right: 0em;
-    color: #2c2c2f;
+    color: #01433f;
     background: #ffffff;/*背景色*/
 }
 
 .textarea_tt{
     display: flex;
     width: 90%;
+    flex-direction: column;
 }
 
 .textarea_tt textarea[type='text'] {
     margin: 20px;
+    margin-top: 0px;
+    margin-bottom: 0px;
     width: inherit;
     transition: 0.3s;
     letter-spacing: 1px;
@@ -322,18 +393,17 @@ aside p {
 
 .textarea_bb{
     display: flex;
+    margin-bottom: 20px;
 }
 
-.textarea_bb button{
-    margin-top:20px;
+.textarea_tt button{
     margin-left:20px;
     margin-right: 40px;
-    margin-bottom: 20px;
-    padding:10px;
+    padding: 0.25em 0.5em;
     text-decoration: none;
     color: #FFF;
-    background: #21b4c7;/*色*/
-    border: solid 1px #1aaab4;/*線色*/
+    background: rgb(60,188,189);/*色*/
+    border: solid 1px rgb(60,188,189);/*線色*/
     border-radius: 4px;
     box-shadow: inset 0 1px 0 rgba(255,255,255,0.2);
     text-shadow: 0 1px 0 rgba(0,0,0,0.2);
@@ -496,6 +566,7 @@ form dl dd{
     }
     .top_box {
         margin: auto;
+        max-width:inherit;
         margin-bottom: 5px;
     }
     .post_box {
@@ -517,6 +588,8 @@ form dl dd{
 
     .textarea_tt textarea[type='text'] {
         margin: 20px;
+        margin-top: 0px;
+        margin-bottom: 0px;
         width: inherit;
     }
 
@@ -575,6 +648,7 @@ form dl dd{
     .textarea_box {
         margin: auto;
         width: 100%;
+        text-align: center;
     }
     .textarea_box textarea[type='text'] {
         margin:auto;
